[package]
name = "counter"
version = "1.0.0"
authors = ["developers@trafficland.com"]
build="build.rs"

[dependencies]
elp = "2.0.0"
walkdir = "1.0.7"
rustc-serialize = "0.3"
env_logger = "0.3.2"
chrono = "0.2.17"
log = "0.3.5"
clap = "2.20.3"
num_cpus = "1.2.1"
scoped-pool = "1.0.0"
regex = "0.2"
lazy_static = "0.2.2"

[dev-dependencies]
names = "0.11.0"
rand = "0.3.15"

[build-dependencies]
rustc_version = "0.1.7"
chrono = "0.2.25"
